web-dev-server,代码自动编译且自动刷新但是不生成dist哈

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    title test pug
+    title test pug  ind
   body
     h1 #{name}
     img(src="img/3.jpg", alt="3", srcset="img/3.jpg")
