生产和开发环境的分离

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,6 @@ html
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
     title test pug  ind
   body
-    h1 #{name}
+    h1 #{name} i kike this
     img(src="img/3.jpg", alt="3", srcset="img/3.jpg")
     h2.iconfont.icon-jian
