--- a/src/index.pug
+++ b/src/index.pug
@@ -7,5 +7,7 @@ html
     title test pug  ind
   body
     h1 #{name} i kike this
-    img(src="img/3.jpg", alt="3", srcset="img/3.jpg")
+    img(src="img/3.jpg", alt="3")
+    //- img(src="img/3.jpg", alt="3",srcset="img/3.jpg")
+    //- srcset的路径并不是fileloader转化后的路径
     h2.iconfont.icon-jian
