--- a/src/activity-gn/js/layer.css
+++ b/src/activity-gn/js/layer.css
@@ -4,32 +4,41 @@ $contentFontSize: 14px;
 $contentColor: #999;
 $btnFontSize: $contentFontSize;
 $borderColor: #eee;
-$leftBtnColor: #40affe;
-$rightBtnColor: #999;
+$leftBtnColor: #999;
+$rightBtnColor: #40affe;
 
 body,html,h3,p{
   margin: 0;
   padding: 0;
 }
+
 body,html{
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
+}
+.noscroll,
+.noscroll body {
+    overflow: hidden;
+}
+.noscroll body {
+    position: relative;
 }
 
-#z-layer{
+.z-layer{
   width: 100%;
   height: 100%;
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 99;
 }
-#z-layer-mask{
+/* .z-layer-mask{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
-}
-.z-layer-wrap{
+} */
+.z-layer-mask{
   width: 100%;
   height: 100%;
   display: flex;
@@ -37,6 +46,7 @@ body,html{
   align-items: center;
   /* 水平居中 */
   justify-content: center;
+  background-color: rgba(0, 0, 0, .5);
 }
 .z-layer-box{
   width: 80%;
@@ -72,12 +82,60 @@ body,html{
   padding: 15px 0;
   flex: 1;
   text-align: center;
+  text-decoration: none;
 }
 .z-layer-btn:nth-child(1){
   color: $leftBtnColor;
 }
-.z-layer-btn:nth-child(2){
+.z-layer-btn:nth-last-child(1){
   border-left: 1px solid $borderColor;
   color: $rightBtnColor;
 }
 
+.z-toast{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 99;
+}
+
+.z-toast-mask{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* 垂直居中 */
+  align-items: center;
+  /* 水平居中 */
+  justify-content: center;
+  // background-color: rgba(0, 0, 0, .5);
+}
+
+.z-toast-box{
+  background-color: rgba(0,0,0,.5);
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+  padding: 8px 15px;
+  border-radius: 4px;
+  display: flex;
+  /* 垂直居中 */
+  align-items: center;
+  /* 水平居中 */
+  justify-content: center;
+  flex-direction: column;
+}
+.z-toast-box.has-icon{
+  width: 100px;
+  height: 100px;
+  box-sizing:border-box;
+}
+.z-toast-box.has-icon .z-toast-content{
+  // margin-top:3px;
+}
+.z-toast-icon{
+  display: block;
+  width: 70px;
+  height: 70px;
+}
